--- a/.i3status.conf
+++ b/.i3status.conf
@@ -8,24 +8,31 @@
 
 general {
         colors = true
-        interval = 10
+        interval = 5
 }
 
-order += "cpu_temperature 0"
+# order += "cpu_temperature 0"
 # order += "disk /"
 # order += "run_watch DHCP"
 # order += "run_watch VPN"
 order += "wireless wlp2s0"
 # order += "ethernet eth0"
 order += "battery 1"
-# order += "load"
+order += "load"
 order += "volume master"
+# order += "brightness"
 order += "tztime local"
 
 cpu_temperature 0 {
 	format = "T: %degrees °C"
 	max_threshold = 65
 }
+
+
+# brightness {
+# 	path = "/sys/class/backlight/acpi_video0/"
+#         format = "%brightness"
+# }
 
 volume master {
        format = "V: %volume"
@@ -65,7 +72,8 @@ tztime local {
 }
 
 load {
-        format = "%1min"
+        format = "%1min %5min %15min"
+        max_threshold = 2
 }
 
 disk "/" {
