--- a/.i3/config
+++ b/.i3/config
@@ -127,7 +127,8 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Do you really want to exit i3 and end your X session?' -b 'Yes, exit i3' 'i3-msg exit'"
+# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Do you really want to exit i3 and end your X session?' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-msg exit"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -161,11 +162,11 @@ mode "$mode_system" {
         set $i3lock i3lock -c 111111 -d
 
         bindsym l exec --no-startup-id $i3lock, mode "default"
-        bindsym e exec --no-startup-id i3-msg exit, mode "default"
+        bindsym e exec --no-startup-id i3-msg exit
         bindsym s exec --no-startup-id $i3lock && systemctl suspend, mode "default"
         bindsym h exec --no-startup-id $i3lock && systemctl hibernate, mode "default"
-        bindsym r exec --no-startup-id systemctl reboot, mode "default"
-        bindsym Shift+s exec --no-startup-id systemctl poweroff, mode "default"  
+        bindsym r exec --no-startup-id systemctl reboot
+        bindsym Shift+s exec --no-startup-id systemctl poweroff
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
@@ -175,21 +176,29 @@ mode "$mode_system" {
 bindsym $mod+l mode "$mode_system"
 
 
-# client colors tweaking
-# client.focused          #4c7899 #601010 #ffffff #2e9ef4
+# default client colors
+# class                 border  backgr. text    indicator
+# client.focused          #4c7899 #285577 #ffffff #2e9ef4
 # client.focused_inactive #333333 #5f676a #ffffff #484e50
 # client.unfocused        #333333 #222222 #888888 #292d2e
 # client.urgent           #2f343a #900000 #ffffff #900000
 
+# Solarized theme
+client.focused          #859900 #859900 #fdf6e3 #2e9ef4
+client.focused_inactive #268bd2 #268bd2 #fdf6e3 #484e50
+client.unfocused        #333333 #93a1a1 #fdf6e3 #292d2e
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+
+# Start i3bar to display a workspace bar (system information)
 bar {
         status_command i3status
-#	mode hide
-
 	colors {
 	       background #090020
+
+               # Solarized theme
+               focused_workspace #cb4b16 #cb4b16 #eee8d5
+               active_workspace #cb4b16 #cb4b16 #eee8d5
+               inactive_workspace #b58900 #b58900 #eee8d5
 	}
 }
 
@@ -199,7 +208,8 @@ bindsym XF86MonBrightnessDown exec --no-startup-id /usr/bin/xbacklight -dec 5
 bindsym XF86AudioRaiseVolume exec amixer set Master 3%+ unmute
 bindsym XF86AudioLowerVolume exec amixer set Master 3%- unmute
 bindsym XF86AudioMute exec amixer set Master toggle
-bindsym Print exec --no-startup-id /usr/bin/scrot '%Y-%m-%d_%H%M%S_$wx$h.png' -e 'mv $f ~/Pictures/' && notify-send 'Screenshot taken!'
+bindsym Print exec --no-startup-id /usr/bin/gscreenshot
+# bindsym Print exec --no-startup-id /usr/bin/scrot '%Y-%m-%d_%H%M%S_$wx$h.png' -e 'mv $f ~/Pictures/' && notify-send 'Screenshot taken!'
 
 # bindsym Ctrl+$Alt+Left workspace prev
 # bindsym Ctrl+$Alt+Right workspace next
@@ -241,6 +251,7 @@ exec --no-startup-id i3-msg 'workspace $workspace1; exec ${TERMINAL}'
 exec --no-startup-id i3-msg 'workspace $workspace2; exec ${BROWSER}'
 exec --no-startup-id i3-msg 'workspace $workspace1'
 exec --no-startup-id sh ~/.fehbg
+exec --no-startup-id xcompmgr -cCfF
 
 # Background
 exec --no-startup-id /usr/bin/CopyAgent
