--- a/.i3/config
+++ b/.i3/config
@@ -192,8 +192,11 @@ client.unfocused        #333333 #93a1a1 #fdf6e3 #292d2e
 # Start i3bar to display a workspace bar (system information)
 bar {
         status_command i3status
+        tray_output LVDS1
 	colors {
-	       background #090020
+	       # background #090020
+               background #002b32
+               statusline #eee8d5
 
                # Solarized theme
                focused_workspace #cb4b16 #cb4b16 #eee8d5
@@ -265,4 +268,4 @@ exec --no-startup-id /usr/bin/dropboxd
 exec --no-startup-id LC_ALL=C /usr/bin/parcellite
 exec --no-startup-id /usr/bin/nm-applet
 # exec --no-startup-id /usr/bin/wicd-gtk -t
-exec --no-startup-id /usr/bin/redshift-gtk
+exec --no-startup-id /usr/bin/redshift
