--- a/.i3/config
+++ b/.i3/config
@@ -191,8 +191,8 @@ client.unfocused        #333333 #93a1a1 #fdf6e3 #292d2e
 
 # Start i3bar to display a workspace bar (system information)
 bar {
-        status_command i3status
-        tray_output primary
+        status_command python ~/.i3pystatus.py # i3status
+        tray_output LVDS1
 	colors {
 	       # background #090020
                background #002b32
