--- a/.i3/config
+++ b/.i3/config
@@ -206,8 +206,8 @@ bar {
 }
 
 # Custom hotkeys: use xev to learn the hotkey names
-bindsym XF86MonBrightnessUp exec --no-startup-id /usr/bin/xbacklight -inc 5
-bindsym XF86MonBrightnessDown exec --no-startup-id /usr/bin/xbacklight -dec 5
+bindsym XF86MonBrightnessUp exec --no-startup-id /usr/bin/xbacklight -inc 4
+bindsym XF86MonBrightnessDown exec --no-startup-id /usr/bin/xbacklight -dec 4
 bindsym XF86AudioRaiseVolume exec /usr/bin/amixer set Master 3%+ unmute
 bindsym XF86AudioLowerVolume exec /usr/bin/amixer set Master 3%- unmute
 bindsym XF86AudioMute exec /usr/bin/amixer set Master toggle
@@ -241,7 +241,7 @@ workspace_auto_back_and_forth yes
 workspace_layout tabbed
 
 
-# assign: use xprop to learn the class string
+# assign: use xorg-xprop to learn the class string
 # assign [class="^Chromium$"] → $workspace2
 # assign [class="^Firefox$"] → $workspace2
 # assign [class="^Midori$"] → $workspace2
