fixed a little annoyance

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -21,8 +21,8 @@
 
     <family>monospace</family>
     <prefer>
-       <!-- <family>DejaVu Sans Mono</family> -->
-       <family>Cousine</family>
+      <!-- <family>DejaVu Sans Mono</family> -->
+      <family>Ubuntu Mono</family>
     </prefer>
   </alias>
 
@@ -72,4 +72,14 @@
       <const>lcddefault</const>
     </edit>
   </match>
+  <!-- Fix Github Fuzzy Fonts -->
+  <selectfont>
+    <rejectfont>
+      <pattern>
+        <patelt name="family">
+          <string>Clean</string>
+        </patelt>
+      </pattern>
+    </rejectfont>
+  </selectfont>
 </fontconfig>
