--- a/.i3status.conf
+++ b/.i3status.conf
@@ -8,11 +8,12 @@
 
 general {
         colors = true
-        interval = 5
+        interval = 4
 }
 
 # order += "cpu_temperature 0"
 # order += "disk /"
+order += "disk /home"
 # order += "run_watch DHCP"
 # order += "run_watch VPN"
 order += "wireless wlp2s0"
@@ -23,6 +24,7 @@ order += "volume master"
 # order += "brightness"
 order += "tztime local"
 
+
 cpu_temperature 0 {
 	format = "T: %degrees °C"
 	max_threshold = 60
@@ -31,18 +33,18 @@ cpu_temperature 0 {
 
 # brightness {
 # 	path = "/sys/class/backlight/acpi_video0/"
-#         format = "%brightness"
+#     format = "%brightness"
 # }
 
 volume master {
-       format = "V: %volume"
+       format = "♪:%volume"
        device = "default"
        mixer = "Master"
        mixer_idx = 0
 }
 
 wireless wlp2s0 {
-        format_up = "W: (%quality @ %essid) %ip"
+        format_up = "W: %quality @ %essid - %ip"
         format_down = "W: down"
 }
 
@@ -68,12 +70,11 @@ run_watch VPN {
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "%Y-%m-%d %H:%M KW%V"
 }
 
 load {
-        format = "%1min %5min %15min"
-        max_threshold = 2
+        format = "%1min"
 }
 
 disk "/" {
@@ -82,5 +83,5 @@ disk "/" {
 
 disk "/home" {
 # %used %total % avail
-        format = "/home: %used/%total"
+        format = "%used+%avail@/home" # %total
 }
